--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "@googlemaps/js-api-loader": "^1.16.8",
     "@sendgrid/mail": "^8.1.4",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.3",
     "@types/nodemailer": "^6.4.17",
     "next": "14.1.0",
+    "next-cloudinary": "^6.16.0",
     "nodemailer": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
