--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.3",
     "@types/nodemailer": "^6.4.17",
-    "next": "14.1.0",
+    "next": "^15.3.1",
     "next-cloudinary": "^6.16.0",
     "nodemailer": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-email": "^2.0.0",
+    "react-email": "^4.0.7",
     "react-quill": "^2.0.0"
   },
   "devDependencies": {
